service.yaml
apiVersion: v1
kind: Service
metadata:
  name: es-helper-service
spec:
  type: NodePort
  selector:
    app: es-helper
  ports:
    - port: 8080
      targetPort: 8080
